k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yellowbook-mysql
  namespace: ingress-nginx
spec:
  selector:
    app: yellowbook-mysql
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
      nodePort: 30002
  type: NodePort
