k8s/yellowbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yellowbook
  namespace: ingress-nginx
spec:
  selector:
    app: yellowbook
  ports:
    - protocol: TCP
      name: http
      port: 81
      targetPort: 8081
  type: LoadBalancer
