k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yellowbook-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: develop.yebook123.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: yellowbook
                port:
                  number: 81
            path: /api
